--- a/projects/angular-speech-to-text/package.json
+++ b/projects/angular-speech-to-text/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-speech-to-text",
   "author": "Diego Santiago - Vayapedal",
-  "version": "0.0.13",
+  "version": "1.0.0",
   "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^13.1.0",
@@ -16,5 +16,12 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/diegolijo/angular-speech-to-text.git"
-  }
+  },
+  "keywords": [
+    "angular",
+    "vosk",
+    "speech-to-text",
+    "ecosystem:cordova",
+    "cordova-android"
+  ]
 }
