--- a/projects/angular-speech-to-text/package.json
+++ b/projects/angular-speech-to-text/package.json
@@ -1,17 +1,17 @@
 {
   "name": "angular-speech-to-text",
   "author": "Diego Santiago - Vayapedal",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "^13.1.0",
-    "@angular/core": "^13.1.0",
-    "@ionic/angular": "^6.0.5",
-    "rxjs": "~7.4.0",
-    "typescript": "^4.5.5"
+    "@angular/common": "13.1.0",
+    "@angular/core": "13.1.0",
+    "@ionic/angular": "6.0.5",
+    "rxjs": "7.4.0",
+    "typescript": "4.5.5"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "2.3.1"
   },
   "repository": {
     "type": "git",
