--- a/projects/angular-speech-to-text/package.json
+++ b/projects/angular-speech-to-text/package.json
@@ -1,14 +1,14 @@
 {
   "name": "angular-speech-to-text",
   "author": "Diego Santiago - Vayapedal",
-  "version": "1.0.8",
+  "version": "1.0.15",
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "13.1.0",
-    "@angular/core": "13.1.0",
-    "@ionic/angular": "6.0.5",
-    "rxjs": "7.4.0",
-    "typescript": "4.5.5"
+    "@angular/common": "13.x || 14.x || 15.x",
+    "@angular/core": "13.x || 14.x || 15.x",
+    "@ionic/angular": "6.x || 5.x",
+    "rxjs": "^7.4.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "tslib": "2.3.1"
